--- a/src/leptonic_tensor/run_card.yml
+++ b/src/leptonic_tensor/run_card.yml
@@ -1,9 +1,10 @@
 Model: SM_NLO
+Mode: lmunu
 
 Particles:
     #           PID, direction (in / out)
     - Particle: [11, in]
-    - Particle: [13, in]
-    - Particle: [11, out]
+    - Particle: [-11, in]
     - Particle: [13, out]
+    - Particle: [-13, out]
     # - Particle: [-13, out]
