--- a/src/leptonic_tensor/run_card.yml
+++ b/src/leptonic_tensor/run_card.yml
@@ -1,19 +1,28 @@
 Model: SM_NLO
-Mode: lmunu
+Mode:
 PtCut: 1
-EnergyRange: [20, 200, 51]
-NEvents: 10000
+EnergyRange: [20, 200, 190]
+NEvents: 1000
 
 Particles:
     #           PID, direction (in / out)
     # e-mu- to e-mu-
-    - Particle: [11, in]
-    - Particle: [13, in]
-    - Particle: [11, out]
-    - Particle: [13, out]
+    # - Particle: [11, in]
+    # - Particle: [13, in]
+    # - Particle: [11, out]
+    # - Particle: [13, out]
     
     # e+e- to mu+mu-
     # - Particle: [11, in]
     # - Particle: [-11, in]
     # - Particle: [13, out]
     # - Particle: [-13, out]
+    
+    ######## THESIS PROCESSES ########
+    
+    # PROCESS 1:
+    # e-p to e-p (treated as e-mu+ to e-mu+)
+    - Particle: [11, in]
+    - Particle: [-13, in]
+    - Particle: [11, out]
+    - Particle: [-13, out]
