--- a/src/leptonic_tensor/run_card.yml
+++ b/src/leptonic_tensor/run_card.yml
@@ -2,7 +2,7 @@ Model: SM_NLO
 Mode:
 PtCut: 1
 EnergyRange: [20, 200, 190]
-NEvents: 100000
+NEvents: 10000
 
 Particles:
     #           PID, direction (in / out)
@@ -18,10 +18,16 @@ Particles:
     # - Particle: [13, out]
     # - Particle: [-13, out]
     
+    # Test e+ nu_mu_bar to nue_bar mu+
+    # - Particle: [-11, in]
+    # - Particle: [-14, in]
+    # - Particle: [-12, out]
+    # - Particle: [-13, out]
+    
     ######## THESIS PROCESSES ########
     
     # PROCESS 1:
-    # e-p+ to e-p+ (treated as e-mu+ to e-mu+)
+    # e-p+ to e-p+ (treated as e-mu- to e-mu-)
     # - Particle: [11, in]
     # - Particle: [13, in]
     # - Particle: [11, out]
